[gd_scene load_steps=12 format=3 uid="uid://doj0nvhytxean"]

[ext_resource type="Script" path="res://src/main/component/Scripts/player_base.gd" id="1_yob1g"]
[ext_resource type="Script" path="res://src/main/common/script_classes/hurt_box.gd" id="2_1gfhr"]
[ext_resource type="PackedScene" uid="uid://dh2ukdh3ht4v5" path="res://src/main/scene/ui/PauseScreen/pause_screen.tscn" id="2_fah7v"]
[ext_resource type="Script" path="res://src/main/common/script_classes/state_machine.gd" id="3_2r57c"]
[ext_resource type="PackedScene" uid="uid://dovpo3i0usorp" path="res://src/main/scene/ui/CardsScreen/cards_screen.tscn" id="3_3qbx4"]
[ext_resource type="PackedScene" uid="uid://dfuqyia8xwx10" path="res://src/main/scene/ui/StatusScreen/status_screen.tscn" id="4_4ytyy"]
[ext_resource type="Script" path="res://src/main/common/script_classes/weapon_attribute_manager.gd" id="6_kxnos"]
[ext_resource type="Script" path="res://src/main/common/script_classes/trait_attribute_manager.gd" id="6_xno6v"]
[ext_resource type="PackedScene" uid="uid://l6lc8laggmtw" path="res://src/main/scene/ui/Common/HealthBar/health_bar.tscn" id="26_6ndas"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qmr2h"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:direction")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("PlayerStats:health")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("PlayerStats:health_shield")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:coin_count")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath(".:energy_count")
properties/5/spawn = true
properties/5/replication_mode = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_b2n6h"]
radius = 15.0

[node name="PlayerBase" type="CharacterBody2D" groups=["player"]]
z_index = 10
y_sort_enabled = true
scale = Vector2(1.3, 1.3)
collision_layer = 2
motion_mode = 1
script = ExtResource("1_yob1g")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseScreen" parent="CanvasLayer" instance=ExtResource("2_fah7v")]

[node name="CardsScreen" parent="CanvasLayer" instance=ExtResource("3_3qbx4")]

[node name="StatusScreen" parent="CanvasLayer" instance=ExtResource("4_4ytyy")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qmr2h")

[node name="Camera2D" type="Camera2D" parent="."]
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[node name="Graphics" type="Node2D" parent="."]

[node name="Shadow" type="Sprite2D" parent="Graphics"]
self_modulate = Color(1, 1, 1, 0.588235)
position = Vector2(0, 6.92308)
region_enabled = true
region_rect = Rect2(0, 32, 32, 32)

[node name="Sprite2D" type="Sprite2D" parent="Graphics"]

[node name="HurtBox" type="Area2D" parent="Graphics"]
collision_layer = 8
collision_mask = 0
script = ExtResource("2_1gfhr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/HurtBox"]
debug_color = Color(0, 0.643137, 0.301961, 0.419608)

[node name="CoinAbsorption" type="Area2D" parent="Graphics"]
collision_layer = 64
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/CoinAbsorption"]
shape = SubResource("CircleShape2D_b2n6h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_2r57c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="WeaponSlots" type="Node2D" parent="."]

[node name="weapon0" type="Marker2D" parent="WeaponSlots" groups=["weapon_slot"]]

[node name="weapon1" type="Marker2D" parent="WeaponSlots" groups=["weapon_slot"]]

[node name="weapon2" type="Marker2D" parent="WeaponSlots" groups=["weapon_slot"]]

[node name="weapon3" type="Marker2D" parent="WeaponSlots" groups=["weapon_slot"]]

[node name="weapon4" type="Marker2D" parent="WeaponSlots" groups=["weapon_slot"]]

[node name="weapon5" type="Marker2D" parent="WeaponSlots" groups=["weapon_slot"]]

[node name="weapon6" type="Marker2D" parent="WeaponSlots" groups=["weapon_slot"]]

[node name="weapon7" type="Marker2D" parent="WeaponSlots" groups=["weapon_slot"]]

[node name="weapon8" type="Marker2D" parent="WeaponSlots" groups=["weapon_slot"]]

[node name="weapon9" type="Marker2D" parent="WeaponSlots" groups=["weapon_slot"]]

[node name="WeaponAttributeManager" type="Node" parent="."]
script = ExtResource("6_kxnos")

[node name="TraitAttributeManager" type="Node" parent="."]
script = ExtResource("6_xno6v")

[node name="HealthBar" parent="." instance=ExtResource("26_6ndas")]
offset_left = -16.1538
offset_top = 11.5385
offset_right = 13.8462
offset_bottom = 13.5385

[connection signal="hurt" from="Graphics/HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
